--- a/application.properties
+++ b/application.properties
@@ -19,8 +19,11 @@ eureka.instance.leaseExpirationDurationInSeconds: 5
 eureka.instance.preferIpAddress: true
 #eureka.instance.statusPageUrlPath: /admin/info
 #eureka.instance.healthCheckUrlPath: /admin/health
-eureka.instance.metadataMap.hostname: ${vcap.application.application_uris[0]}
-eureka.instance.metadataMap.instanceId: ${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${random.value}}}
+#eureka.instance.metadataMap.hostname: ${vcap.application.application_uris[0]}
+#eureka.instance.metadataMap.instanceId: ${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${random.value}}}
+eureka.instance.hostname: ${vcap.application.application_uris[0]}
+eureka.instance.instanceId: ${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${random.value}}}
+
 eureka.client.registerWithEureka: true
 eureka.client.fetchRegistry: true
 eureka.client.serviceUrl.defaultZone: http://127.0.0.1:8761/eureka/
