--- a/application.properties
+++ b/application.properties
@@ -21,8 +21,9 @@ eureka.instance.preferIpAddress: true
 #eureka.instance.healthCheckUrlPath: /admin/health
 #eureka.instance.metadataMap.hostname: ${vcap.application.application_uris[0]}
 #eureka.instance.metadataMap.instanceId: ${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${random.value}}}
-eureka.instance.hostname: ${vcap.application.application_uris[0]}
-eureka.instance.instanceId: ${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${random.value}}}
+
+eureka.instance.hostname: ${vcap.application.uris[0]}
+eureka.instance.instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 eureka.client.registerWithEureka: true
 eureka.client.fetchRegistry: true
