--- a/application.properties
+++ b/application.properties
@@ -19,10 +19,11 @@ eureka.instance.leaseExpirationDurationInSeconds: 5
 eureka.instance.preferIpAddress: true
 #eureka.instance.statusPageUrlPath: /admin/info
 #eureka.instance.healthCheckUrlPath: /admin/health
+
+#新版和老版的 instanceId配置规则不一样
 #eureka.instance.metadataMap.hostname: ${vcap.application.application_uris[0]}
 #eureka.instance.metadataMap.instanceId: ${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${random.value}}}
 
-eureka.instance.hostname: ${vcap.application.uris[0]}
 eureka.instance.instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 eureka.client.registerWithEureka: true
