--- a/eurekaclientA-localprofile.yml
+++ b/eurekaclientA-localprofile.yml
@@ -1,3 +1,3 @@
 info:
-  configuration: Read From Config Service localprofile.yml
+  configuration: Read From Config Service localprofile.yml2015
   defaultmessage: this is defaultmessage 读取配置的profiles ==> localprofile.yml
