--- a/application.properties
+++ b/application.properties
@@ -2,15 +2,14 @@
 #Actuator management path
 #management.context-path: /admin
 
-info.configuration: Read From Config Service application.properties
+info.configuration: Read From Config Service application.properties-2016
 
-#Enabling actuator endpoints
+#Enabling actuator endpoints  turbine也用到了
 endpoints.restart.enabled: true
 endpoints.shutdown.enabled: true
 endpoints.health.sensitive: false
 
-
-
+logging.level.root: INFO
 logging.level.com.netflix.discovery: 'OFF'
 logging.level.org.springframework.cloud: 'DEBUG'
 
