--- a/application.properties
+++ b/application.properties
@@ -28,5 +28,6 @@ eureka.instance.instanceId: ${spring.application.name}:${spring.application.inst
 eureka.client.registerWithEureka: true
 eureka.client.fetchRegistry: true
 eureka.client.serviceUrl.defaultZone: http://127.0.0.1:8761/eureka/
+eureka.client.serviceUrl.defaultZone: http://127.0.0.1:8762/eureka/
 
 hystrix.stream.amqp.send-id: false
