--- a/eurekaclientB.yml
+++ b/eurekaclientB.yml
@@ -9,7 +9,7 @@ spring:
     datasource:
         schema: import.sql
         name: database
-        url: jdbc:mysql://123.56.118.135:3306/master?useUnicode=true&characterEncoding=utf-8
+        url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8
         username: mobile
         password: mobile
         # 使用druid数据源
